# vp-c

./: .gitignore  BUGS.md  CLAUDE.md  CMakeLists.txt  CODE_REVIEW.md  EXE_MATCHING_ANALYSIS.md  LICENSE  MATCHING_ISSUE.md  Makefile  README.md  README_CPP.md  TEST_RESULTS.md  api.go  go.mod  main.go  process.go  process_test.go  procutil.go  resource.go  state.go  vp  web.html
src/: api.cpp  api.hpp  json_simple.hpp  main.cpp  process.cpp  process.hpp  procutil.cpp  procutil.hpp  resource.cpp  resource.hpp  state.cpp  state.hpp  test.cpp  test.hpp  test_api.cpp  test_core.cpp  test_main.cpp  types.hpp
